TERR-29
-Added simple homework creation